# CSCE689_FinalProject

./: CMakeLists.txt  TestResults.xlsx  main.cpp
Demore/: CMakeLists.txt  README.md
Demore/include/: DivFinder.h  DivFinderSP.h  DivFinderT.h
Demore/src/: DivFinderSP.cpp  DivFinderT.cpp  DivFinderT_main.cpp  DivFinder_main.cpp
Garland/: CMakeLists.txt  main.cpp
Garland/include/: DivFinder.h  DivFinderT.h  DronePlotDB.h  PrimeServer.hpp  ReplServer.h  TCPConn.h  TCPConn.hpp  primesvr.hpp
Garland/src/: DivFinder.cpp  DivFinderT.cpp  Makefile  PrimeServer.cpp  TCPConn.cpp  primesvr.cpp  primesvr_main.cpp
Noel_SingleProcess/: DivFinderSP.cpp  DivFinderSP.h
Single Process/: CMakeLists.txt
Single Process/include/: DivFinder.h  DivFinderT.h  config.h
Single Process/src/: DivFinder.cpp  DivFinderSP.cpp  DivFinderT.cpp  DivFinderT_main.cpp  DivFinder_main.cpp
include/: PrimeServer.hpp
